--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,397 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  max-width: 1000px;
+  margin: auto;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  margin-top: 20px;
+  margin-bottom: 15px;
+  text-align: right;
+}
+
+.top {
+  background-color: #CCCCCC;
+  padding: 10px 15px;
+  margin: 15px 0 20px 0;
+}
+
+.topText {
+  font-size: 22px;
+  margin: 0;
+  color: rgba(0, 0, 0, 0.68);
+}
+
+.container {
   display: flex;
-  flex-direction: column;
+}
+
+.mainBox {
+  width: 69%;
+  height: 550px;
+  background: linear-gradient(0.26deg, rgba(196, 196, 196, 0.19) -0.04%, rgba(196, 196, 196, 0) 99.08%);
+  border: 1px solid #EDEDED;
+  box-sizing: border-box;
+  border-radius: 10px;
+  margin-right: 1%;
+  text-align: center;
+  position: relative;
+}
+
+.mainBox h3 {
+  font-style: normal;
+  line-height: normal;
+  font-size: 18px;
+  letter-spacing: 0.01em;
+  color: rgba(0, 0, 0, 0.77);
+}
+
+.mainBox p {
+  font-style: normal;
+  font-weight: normal;
+  line-height: normal;
+  font-size: 14px;
+  letter-spacing: 0.01em;
+  color: rgba(0, 0, 0, 0.65);
+}
+
+form {
+  display: inline-block;
+  width: 380px;
+}
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+  font-style: normal;
+  font-weight: bold;
+  line-height: normal;
+  font-size: 14px;
+  letter-spacing: 0.01em;
+  color: #666666;
+}
+
+.inputBox {
+  padding-left: 5px;
+}
+
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+.col-20 {
+  float: left;
+  width: 30%;
+  margin-top: 6px;
+}
+
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+.col-65 {
+  float: left;
+  width: 50%;
+  margin-top: 6px;
+}
+
+.col-15 {
+  float: left;
+  width: 20%;
+  margin-top: 6px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+input {
+  border: 1px solid #CCCCCC;
+  box-sizing: border-box;
+  width: 240px;
+  height: 34px;
+}
+
+.btnContainer {
+  margin-left: 5px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-row-gap: 12px;
+  grid-column-gap: 5px;
+}
+
+.btn {
+  background: linear-gradient(0.11deg, rgba(0, 0, 0, 0.07) -0.13%, rgba(196, 196, 196, 0) 71.34%);
+  border-radius: 4px;
+  border: 1px solid #CCCCCC;
+  box-sizing: border-box;
+  width: 34px;
+  height: 34px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.btn p {
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btnRed {
+  background: linear-gradient(0.11deg, #A02F01 -0.13%, #E44200 71.34%);
+  border: 0.5px solid #BE3700;
+  border-radius: 4px;
+  box-sizing: border-box;
+  width: 34px;
+  height: 34px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.btnRed p {
+  font-size: 12px;
+  color: #FFFFFF;
+  font-weight: bold;
+}
+
+.btnLg {
+  margin-left: 14px;
+  border-radius: 4px;
+  box-sizing: border-box;
+  width: 40px;
+  height: 126px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  background: linear-gradient(0.35deg, #017701 -0.13%, rgba(1, 160, 1, 0.87) 71.34%);
+  border: 0.75px solid #009000;
+}
+
+.btnLg p {
+  font-size: 12px;
+  color: #FFFFFF;
+  font-weight: bold;
+}
+
+.btnRed:hover {
+  background-color: rgb(104, 33, 5);
+}
+
+.btnLg:hover {
+  background-color: #027202;
+}
+
+.btn:hover {
+  background-color: #eaeaea;
+}
+
+.login {
+  text-decoration: none;
+}
+
+.forgot {
+  margin-top: 25px;
+  position: absolute;
+}
+
+.forgot p {
+  font-size: 12px;
+  cursor: pointer;
+  color: #666666;
+}
+
+.newHere {
+  position: absolute;
+  bottom: 115px;
+}
+
+.newHere p {
+  font-size: 14px;
+  letter-spacing: 0.01em;
+  color: #B2B2B2;
+}
+
+.btnRegister {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 106px;
+  height: 37px;
+  background: #DE4A0A;
+  border: 1px solid #CC2D00;
+  box-sizing: border-box;
+  filter: blur(0.5px);
+  border-radius: 4px;
+  padding: 0 10px;
+  cursor: pointer;
+  margin-top: -5px;
+}
+
+.btnRegister:hover {
+  background-color: rgb(146, 49, 8);
+}
+
+.btnRegister p {
+  margin: 0px;
+  font-style: normal;
+  font-weight: bold;
+  line-height: normal;
+  font-size: 12px;
+  letter-spacing: 0.01em;
+  color: #FFFFFF;
+}
+
+.remember {
+  position: absolute;
+  bottom: 10px;
+  left: 200px;
+}
+
+.rememberText {
+  font-size: 16px;
+  letter-spacing: 0.01em;
+  color: #666666;
+}
+
+.input {
+  width: 12px;
+  border-radius: 2px;
+  position: absolute;
+  left: -20px;
+  margin-top: 5px;
+}
+
+.sideBox {
+  width: 29%;
+  height: 650px;
+  border: 1px solid rgba(204, 204, 204, 0.36);
+  box-sizing: border-box;
+  border-radius: 10px;
+  margin-left: 1%;
+  text-align: center;
+}
+
+.img2 {
+  margin-top: 15px;
+}
+
+.subContainer {
+  display: flex;
+}
+
+.smallBox {
+  background: linear-gradient(0.1deg, rgba(0, 0, 0, 0.07) -0.13%, rgba(196, 196, 196, 0) 71.34%);
+  border: 1px solid #EDEDED;
+  box-sizing: border-box;
+  border-radius: 4px;
+  height: 190px;
+  width: 22%;
+  margin-top: -75px;
+  padding: 13px;
+  position: relative;
+}
+
+.smallBox h4 {
+  font-size: 17px;
+  color: rgba(0, 0, 0, 0.71);
+  margin-top: 10px;
+}
+
+.smallBox p {
+  font-size: 12px;
+  color: #666666;
+  font-style: normal;
+  font-weight: normal;
+  line-height: normal;
+  letter-spacing: 0.01em;
+}
+
+.shield {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+}
+
+.token {
+  position: absolute;
+  right: 15px;
+  bottom: 40px;
+}
+
+.counter {
+  position: absolute;
+  left: 5px;
+  bottom: 40px;
+}
+
+.boxes {
+  position: absolute;
+  bottom: 51px;
+  left: 37px;
+}
+
+.boxBtn {
+  cursor: pointer;
+  background: #666666;
+  border: 1px solid #5D5D5D;
+  box-sizing: border-box;
+  border-radius: 10px;
+  padding: 5px 18px;
+  font-style: normal;
+  font-weight: bold;
+  line-height: normal;
+  font-size: 12px;
+  letter-spacing: 0.03em;
+  color: #FFFFFF;
+  position: absolute;
+  bottom: 10px;
+}
+
+.boxBtn:hover {
+  color: #666666;
+  background: #FFFFFF;
+}
+
+.box1 {
+  margin-right: 0.75%;
+}
+
+.box2 {
+  margin-left: 0.75%;
+  margin-right: 0.75%;
+}
+
+.box3 {
+  margin-left: 0.75%;
+}
+
+.footer {
+  padding: 5px 20px;
+  margin-top: 20px;
+  background: #DE4A09;
+  color: #FFFFFF;
+  text-align: right;
+}
+
+.footerLinks {
+  font-size: 12px;
+  text-decoration: none;
+}
+
+.footerLinks a {
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
+.footerLinks a:hover {
+  text-decoration: underline;
 }
